--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Chat Application",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
-    "startd": "nodemon server"
+    "start-prod": "node server production",
+    "start-dev": "nodemon server development"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
+  },
+  "nodemonConfig": {
+    "ignore": ["config/*", "public/environmentConfig.js"],
+    "delay": "2500"
   }
 }
