--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.5.9",
     "morgan": "^1.10.0",
     "socket.io": "^2.3.0"
   },
@@ -18,7 +19,10 @@
     "nodemon": "^2.0.4"
   },
   "nodemonConfig": {
-    "ignore": ["config/*", "public/EnvironmentConfig.js"],
-    "delay": "2500"
+    "ignore": [
+      "config/*",
+      "public/EnvironmentConfig.js"
+    ],
+    "delay": "500"
   }
 }
